画像ボタンの修正

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -50,7 +50,7 @@
     <input class="form-message" placeholder= "type a message">
     <label class="form-image">
       <span class="image-file">画像</span>
-      <input class="file" class="hidden">
+      <input type="file" class="hidden">
     </label>
   </div>
   <input class="form-submit" type="submit" value="送信">
