--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -19,10 +19,10 @@
         <select name="room[user_ids][]">
           <option value="">チャットするユーザーを選択してください</option>
           <% User.all.where.not(id: current_user.id).each do |user| %>
-          <option value=<%=user.id%>><%= user.name %></option>
+            <option value=<%=user.id%>><%= user.name %></option>
           <% end %>
         </select>
-        <input name="room[user_ids][]" type="hiddin" value=<%=current_user.id%>>
+        <input name="room[user_ids][]" type="hidden" value=<%=current_user.id%>>
       </div>
     </div>
     <div class='chat-room-form__field'>
